@@ -437,7 +437,7 @@ public class CheckInManager {
             // fetch polls for event, in order to determine if we have to print PIN or not
             var polls = pollRepository.findAllForEvent(event.getId());
             boolean hasPolls = !polls.isEmpty();
-            var allowedTags = hasPolls ? polls.stream().flatMap(p -> p.getAllowedTags().stream()).collect(Collectors.toList()) : List.<String>of();
+            var allowedTags = hasPolls ? polls.stream().flatMap(p -> p.allowedTags().stream()).toList() : List.<String>of();
 
             Function<FullTicketInfo, String> encryptedBody = ticket -> {
                 Map<String, String> info = new HashMap<>();
